--- a/frontend/client/src/app/nav/nav.component.html
+++ b/frontend/client/src/app/nav/nav.component.html
@@ -1,24 +1,27 @@
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-  <div class="container-fluid">
+<nav class="navbar navbar-expand-md navbar-secondary fixed-top ">
+  <div class="container">
 
-<a class="navbar-brand" href="#">V-EXPLORE</a>
-      <ul class="navbar-nav me-auto mb-2 mb-md-0" *ngIf="accoutService.currentUser$ | async">
-        <li class="nav-item">
-          <a class="nav-link " aria-current="page" href="#">Matches</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Lists</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link ">Messages</a>
-        </li>
-        <li class="nav-item">
+<a class="navbar-brand nav nav-tabs" routerLink="/">V-EXPLORE</a>
+      <ul class="navbar-nav mr-auto nav-tabs" >
+        <ng-container *ngIf="accoutService.currentUser$ | async">
+          <li class="nav-item">
+            <a class="nav-link " aria-current="page" routerLink="/members" routerLinkActive="active">Matches</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/lists" routerLinkActive="active">Lists</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link " routerLink="/messages" routerLinkActive="active">Messages</a>
+          </li>
+          <li class="nav-item">
 
-        </li>
+          </li>
+        </ng-container>
+
       </ul>
 
-      <div class="dropdown" *ngIf="accoutService.currentUser$ | async" dropdown>
-<a class="dropdown-toggle text-light" dropdownToggle >Welcome user</a>
+      <div class="dropdown" *ngIf="(accoutService.currentUser$ | async) as user" dropdown>
+<a class="dropdown-toggle text-light" dropdownToggle >Welcome {{user.userName | titlecase}}</a>
 <div class="dropdown-menu mt-3" *dropdownMenu>
 <a  class="dropdown-item">Edit Profile</a>
 <div class="dropdown-divider"></div>
